// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configCases builtins css-modules-composes exported tests css modules composes 1`] = `
{
  "simple-bar": "index-css__simple-bar imported-simple-css__imported-simple",
  "simple-foo": "index-css__simple-foo imported-simple-css__imported-simple",
}
`;

exports[`configCases builtins css-modules-composes-preprocessers exported tests css modules with css preprocessers 1`] = `
{
  "class": "index-css__class less-file-less__lessClass",
  "ghi": "index-css__ghi",
  "other": "index-css__other scss-file-scss__scssClass",
  "otherClassName": "index-css__otherClassName globalClassName",
}
`;

exports[`configCases builtins css-modules-composes-sass exported tests css modules in scss 1`] = `
{
  "bar": "index-scss__bar foo-scss__foo",
}
`;

exports[`configCases builtins css-modules-dedupe exported tests css modules dedupe 1`] = `
{
  "backButton": "source-css__backButton buttons-secondary-button-css__secondaryButton buttons-button-css__button",
  "nextButton": "source-css__nextButton buttons-primary-button-css__primaryButton buttons-button-css__button",
}
`;

exports[`configCases builtins css-modules-exports-only exported tests css modules exportsOnly 1`] = `
{
  "simple-bar": "index-css__simple-bar imported-simple-css__imported-simple",
  "simple-foo": "index-css__simple-foo imported-simple-css__imported-simple",
}
`;

exports[`configCases builtins css-modules-local-ident-name-hash exported tests css modules localIdentName with hash 1`] = `
{
  "#": "fc447ab087ae4cd2",
  "##": "dbf7dec709dc91bf",
  "#.#.#": "cc4339f697f296fd",
  "#fake-id": "_03bab14767df4a09",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "_1660593a9befbf18",
  "-a-b-c-": "_8c4e413e84912131",
  "-a0-34a___f": "d9bf8c877b33acd5",
  ".": "aead2153db133cf1",
  "123": "fef7e737d53ff9c2",
  "1a2b3c": "ef035065ca097021",
  ":)": "_6aa3aa81c291dabb",
  ":\`(": "f34c19907e9e59a6",
  ":hover": "fcd17b8681f1b63a",
  ":hover:focus:active": "f27145a89a4d1a00",
  "<><<<>><>": "d7d8ab14bea1c14d",
  "<p>": "d2767284152c3a6e",
  "?": "_8da5839788e75b3f",
  "@": "_35470ed502bd8715",
  "B&W?": "_7896e21b99c3bd42",
  "[attr=value]": "_89fdf6af8cb592f9",
  "_": "_4accb3ed4cdeb7c2",
  "_test": "_83d259ee80ab7290",
  "className": "_0ee1b7cbc170f67e",
  "f!o!o": "_7aa8f596bc38da8c",
  "f'o'o": "_07d6cc43d89b1860",
  "f*o*o": "be419885662a1f5d",
  "f+o+o": "_959e3cdbcde16d48",
  "f/o/o": "_5951fbfcdbec1db3",
  "f\\o\\o": "_9806c8f947aa64c7",
  "foo.bar": "_30bc5fda9ceca999",
  "foo/bar": "_0683ab0c4075135c",
  "foo/bar/baz": "_83e2f7e3f17cfc12",
  "foo\\bar": "dd93a6e33969a1a2",
  "foo\\bar\\baz": "_3331694d4af7650f",
  "f~o~o": "_89ddc803f9e999e5",
  "m_x_@": "ed946a6e604d60d3",
  "someId": "_34a721bb277b66cd",
  "subClass": "_66643173a1cb7d49",
  "test": "_9092e0257c128e96",
  "{}": "_588a2b683d4c0b81",
  "©": "f11ba6a60c7b1431",
  "“‘’”": "_3e722d45dd417853",
  "⌘⌥": "_808767daf9865f13",
  "☺☃": "c1a328b3913ed8cc",
  "♥": "ebc66938c1eee366",
  "𝄞♪♩♫♬": "ae98eaecf7f0c41e",
  "💩": "a19919e10df7e469",
  "😍": "_25f2d363f97e2cf1",
}
`;

exports[`configCases builtins css-modules-locals-convention-camelCase exported tests css modules localsConvention with camelCase 1`] = `
{
  "btn--info_is-disabled_1": "index-css__btn--info_is-disabled_1",
  "btn-info_is-disabled": "index-css__btn-info_is-disabled",
  "btnInfoIsDisabled": "index-css__btn-info_is-disabled",
  "btnInfoIsDisabled1": "index-css__btn--info_is-disabled_1",
  "fooBar": "index-css__foo_bar",
  "foo_bar": "index-css__foo_bar",
  "simple": "index-css__simple",
}
`;

exports[`configCases builtins css-modules-locals-convention-camelCaseOnly exported tests css modules localsConvention with camelCaseOnly 1`] = `
{
  "btnInfoIsDisabled": "index-css__btn-info_is-disabled",
  "btnInfoIsDisabled1": "index-css__btn--info_is-disabled_1",
  "fooBar": "index-css__foo_bar",
  "simple": "index-css__simple",
}
`;

exports[`configCases builtins css-modules-locals-convention-dashes exported tests css modules localsConvention with dashes 1`] = `
{
  "btn--info_is-disabled_1": "index-css__btn--info_is-disabled_1",
  "btn-info-is-disabled": "index-css__btn-info_is-disabled",
  "btn-info-is-disabled-1": "index-css__btn--info_is-disabled_1",
  "btn-info_is-disabled": "index-css__btn-info_is-disabled",
  "foo-bar": "index-css__foo_bar",
  "foo_bar": "index-css__foo_bar",
  "simple": "index-css__simple",
}
`;

exports[`configCases builtins css-modules-pseudo exported tests css modules pseudo syntax 1`] = `
{
  "bar": "index-css__bar",
  "bav": "index-css__bav",
  "foo": "index-css__foo",
  "four": "index-css__four",
  "one": "index-css__one",
  "three": "index-css__three",
  "two": "index-css__two",
}
`;

exports[`configCases builtins css-modules-simple exported tests css modules simple test 1`] = `
{
  "style": "index-module-css__style",
}
`;

exports[`configCases css urls exported tests should be able to handle styles in div.css 1`] = `
{
  "--foo": " url("./img.png")",
  "--foo-bar": " "http://www.example.com/pinkish.gif"",
  "a1": " url("img.ceec04074699c900.png")",
  "a10": " green url("img img.ceec04074699c900.png") xyz",
  "a100": " url("img)img.ceec04074699c900.png")",
  "a101": " url("img img.ceec04074699c900.png")",
  "a102": " url("img img.ceec04074699c900.png")",
  "a103": " url("img(img.ceec04074699c900.png")",
  "a104": " url("img(img.ceec04074699c900.png")",
  "a105": " url("img(img.ceec04074699c900.png")",
  "a106": " url("img(img.ceec04074699c900.png")",
  "a107": " url("img'''img.ceec04074699c900.png")",
  "a108": " url("img'() img.ceec04074699c900.png")",
  "a109": " url("img'img.ceec04074699c900.png")",
  "a11": " green url("img img.ceec04074699c900.png") xyz",
  "a110": " url("img(img.ceec04074699c900.png")",
  "a111": " url("img)img.ceec04074699c900.png")",
  "a112": " url("img img.ceec04074699c900.png")",
  "a113": " url(img\\'\\'\\'img.ceec04074699c900.png)",
  "a114": " url(img\\'\\(\\)\\ img.ceec04074699c900.png)",
  "a115": " url(img\\'img.ceec04074699c900.png)",
  "a116": " url(img\\(img.ceec04074699c900.png)",
  "a117": " url(img\\)img.ceec04074699c900.png)",
  "a118": " url(img\\ img.ceec04074699c900.png)",
  "a119": " url("img.ceec04074699c900.png")",
  "a12": " green url(img.ceec04074699c900.png) xyz",
  "a120": " url("img'''img.ceec04074699c900.png")",
  "a121": " url("img'() img.ceec04074699c900.png")",
  "a122": " url("img'img.ceec04074699c900.png")",
  "a123": " url("img(img.ceec04074699c900.png")",
  "a124": " url("img)img.ceec04074699c900.png")",
  "a125": " url("img img.ceec04074699c900.png")",
  "a126": " url("img.ceec04074699c900.png")",
  "a127": " url(img.ceec04074699c900.png)",
  "a128": " url("img'img.ceec04074699c900.png")",
  "a129": " url("img'() img.ceec04074699c900.png")",
  "a13": " green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) xyz",
  "a130": " url(img\\'\\(\\)\\ img.ceec04074699c900.png)",
  "a131": " url("img.ceec04074699c900.png")",
  "a132": " url("img.ceec04074699c900.png")",
  "a133": " url("img.ceec04074699c900.png?foo=bar")",
  "a134": " url("img.ceec04074699c900.png?foo=bar")",
  "a135": " url("img.ceec04074699c900.png?foo=bar#hash")",
  "a136": " url("img.ceec04074699c900.png?foo=bar#hash")",
  "a137": " url("img.ceec04074699c900.png?foo=bar")",
  "a138": " url("img.ceec04074699c900.png?bar=foo")",
  "a139": " url("img.ceec04074699c900.png?foo=bar#foo")",
  "a14": " url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26' fill='#007aff'><rect width='4' height='4'/><rect x='8' y='1' width='34' height='2'/><rect y='11' width='4' height='4'/><rect x='8' y='12' width='34' height='2'/><rect y='22' width='4' height='4'/><rect x='8' y='23' width='34' height='2'/></svg>")",
  "a140": " url("img.ceec04074699c900.png?bar=foo#bar")",
  "a141": " url("img.ceec04074699c900.png?foo=1&bar=2")",
  "a142": " url("img.ceec04074699c900.png?foo=2&bar=1")",
  "a143": " url("data:image/svg+xml;charset=UTF-8,<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>\\a <!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\" \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\">\\a <svg version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" x=\\"0px\\" y=\\"0px\\"\\a \\9  width=\\"191px\\" height=\\"191px\\" viewBox=\\"0 0 191 191\\" enable-background=\\"new 0 0 191 191\\" xml:space=\\"preserve\\">\\a <path fill=\\"#636363\\" d=\\"M95.5,0C42.8,0,0,42.8,0,95.5S42.8,191,95.5,191S191,148.2,191,95.5S148.2,0,95.5,0z M95.5,187.6\\a \\9 c-50.848,0-92.1-41.25-92.1-92.1c0-50.848,41.252-92.1,92.1-92.1c50.85,0,92.1,41.252,92.1,92.1\\a \\9 C187.6,146.35,146.35,187.6,95.5,187.6z\\"/>\\a <g>\\a \\9 <path fill=\\"#636363\\" d=\\"M92.9,10v8.6H91v-6.5c-0.1,0.1-0.2,0.2-0.4,0.3c-0.2,0.1-0.3,0.2-0.4,0.2c-0.1,0-0.3,0.1-0.5,0.2\\a \\9 \\9 c-0.2,0.1-0.3,0.1-0.5,0.1v-1.6c0.5-0.1,0.9-0.3,1.4-0.5c0.5-0.2,0.8-0.5,1.2-0.7h1.1V10z\\"/>\\a \\9 <path fill=\\"#636363\\" d=\\"M97.1,17.1h3.602v1.5h-5.6V18c0-0.4,0.1-0.8,0.2-1.2c0.1-0.4,0.3-0.6,0.5-0.9c0.2-0.3,0.5-0.5,0.7-0.7\\a \\9 \\9 c0.2-0.2,0.5-0.4,0.7-0.6c0.199-0.2,0.5-0.3,0.6-0.5c0.102-0.2,0.301-0.3,0.5-0.5c0.2-0.2,0.2-0.3,0.301-0.5\\a \\9 \\9 c0.101-0.2,0.101-0.3,0.101-0.5c0-0.4-0.101-0.6-0.3-0.8c-0.2-0.2-0.4-0.3-0.801-0.3c-0.699,0-1.399,0.3-2.101,0.9v-1.6\\a \\9 \\9 c0.7-0.5,1.5-0.7,2.5-0.7c0.399,0,0.8,0.1,1.101,0.2c0.301,0.1,0.601,0.3,0.899,0.5c0.3,0.2,0.399,0.5,0.5,0.8\\a \\9 \\9 c0.101,0.3,0.2,0.6,0.2,1s-0.102,0.7-0.2,1c-0.099,0.3-0.3,0.6-0.5,0.8c-0.2,0.2-0.399,0.5-0.7,0.7c-0.3,0.2-0.5,0.4-0.8,0.6\\a \\9 \\9 c-0.2,0.1-0.399,0.3-0.5,0.4s-0.3,0.3-0.5,0.4s-0.2,0.3-0.3,0.4C97.1,17,97.1,17,97.1,17.1z\\"/>\\a </g>\\a <g>\\a \\9 <path fill=\\"#636363\\" d=\\"M15,95.4c0,0.7-0.1,1.4-0.2,2c-0.1,0.6-0.4,1.1-0.7,1.5C13.8,99.3,13.4,99.6,12.9,99.8s-1,0.3-1.5,0.3\\a \\9 \\9 c-0.7,0-1.3-0.1-1.8-0.3v-1.5c0.4,0.3,1,0.4,1.6,0.4c0.6,0,1.1-0.2,1.5-0.7c0.4-0.5,0.5-1.1,0.5-1.9l0,0\\a \\9 \\9 C12.8,96.7,12.3,96.9,11.5,96.9c-0.3,0-0.7-0.102-1-0.2c-0.3-0.101-0.5-0.3-0.8-0.5c-0.3-0.2-0.4-0.5-0.5-0.8\\a \\9 \\9 c-0.1-0.3-0.2-0.7-0.2-1c0-0.4,0.1-0.8,0.2-1.2c0.1-0.4,0.3-0.7,0.6-0.9c0.3-0.2,0.6-0.5,0.9-0.6c0.3-0.1,0.8-0.2,1.2-0.2\\a \\9 \\9 c0.5,0,0.9,0.1,1.2,0.3c0.3,0.2,0.7,0.4,0.9,0.8s0.5,0.7,0.6,1.2S15,94.8,15,95.4z M13.1,94.4c0-0.2,0-0.4-0.1-0.6\\a \\9 \\9 c-0.1-0.2-0.1-0.4-0.2-0.5c-0.1-0.1-0.2-0.2-0.4-0.3c-0.2-0.1-0.3-0.1-0.5-0.1c-0.2,0-0.3,0-0.4,0.1s-0.3,0.2-0.3,0.3\\a \\9 \\9 c0,0.1-0.2,0.3-0.2,0.4c0,0.1-0.1,0.4-0.1,0.6c0,0.2,0,0.4,0.1,0.6c0.1,0.2,0.1,0.3,0.2,0.4c0.1,0.1,0.2,0.2,0.4,0.3\\a \\9 \\9 c0.2,0.1,0.3,0.1,0.5,0.1c0.2,0,0.3,0,0.4-0.1s0.2-0.2,0.3-0.3c0.1-0.1,0.2-0.2,0.2-0.4C13,94.7,13.1,94.6,13.1,94.4z\\"/>\\a </g>\\a <g>\\a \\9 <path fill=\\"#636363\\" d=\\"M176,99.7V98.1c0.6,0.4,1.2,0.602,2,0.602c0.5,0,0.8-0.102,1.1-0.301c0.301-0.199,0.4-0.5,0.4-0.801\\a \\9 \\9 c0-0.398-0.2-0.699-0.5-0.898c-0.3-0.2-0.8-0.301-1.3-0.301h-0.802V95h0.701c1.101,0,1.601-0.4,1.601-1.1c0-0.7-0.4-1-1.302-1\\a \\9 \\9 c-0.6,0-1.1,0.2-1.6,0.5v-1.5c0.6-0.3,1.301-0.4,2.1-0.4c0.9,0,1.5,0.2,2,0.6s0.701,0.9,0.701,1.5c0,1.1-0.601,1.8-1.701,2.1l0,0\\a \\9 \\9 c0.602,0.1,1.102,0.3,1.4,0.6s0.5,0.8,0.5,1.3c0,0.801-0.3,1.4-0.9,1.9c-0.6,0.5-1.398,0.7-2.398,0.7\\a \\9 \\9 C177.2,100.1,176.5,100,176,99.7z\\"/>\\a </g>\\a <g>\\a \\9 <path fill=\\"#636363\\" d=\\"M98.5,179.102c0,0.398-0.1,0.799-0.2,1.199C98.2,180.7,98,181,97.7,181.2s-0.601,0.5-0.9,0.601\\a \\9 \\9 c-0.3,0.1-0.7,0.199-1.2,0.199c-0.5,0-0.9-0.1-1.3-0.3c-0.4-0.2-0.7-0.399-0.9-0.8c-0.2-0.4-0.5-0.7-0.6-1.2\\a \\9 \\9 c-0.1-0.5-0.2-1-0.2-1.601c0-0.699,0.1-1.399,0.3-2c0.2-0.601,0.4-1.101,0.8-1.5c0.4-0.399,0.7-0.699,1.2-1c0.5-0.3,1-0.3,1.6-0.3\\a \\9 \\9 c0.6,0,1.2,0.101,1.5,0.199v1.5c-0.4-0.199-0.9-0.399-1.4-0.399c-0.3,0-0.6,0.101-0.8,0.2c-0.2,0.101-0.5,0.3-0.7,0.5\\a \\9 \\9 c-0.2,0.199-0.3,0.5-0.4,0.8c-0.1,0.301-0.2,0.7-0.2,1.101l0,0c0.4-0.601,1-0.8,1.8-0.8c0.3,0,0.7,0.1,0.9,0.199\\a \\9 \\9 c0.2,0.101,0.5,0.301,0.7,0.5c0.199,0.2,0.398,0.5,0.5,0.801C98.5,178.2,98.5,178.7,98.5,179.102z M96.7,179.2\\a \\9 \\9 c0-0.899-0.4-1.399-1.1-1.399c-0.2,0-0.3,0-0.5,0.1c-0.2,0.101-0.3,0.201-0.4,0.301c-0.1,0.101-0.2,0.199-0.2,0.4\\a \\9 \\9 c0,0.199-0.1,0.299-0.1,0.5c0,0.199,0,0.398,0.1,0.6s0.1,0.3,0.2,0.5c0.1,0.199,0.2,0.199,0.4,0.3c0.2,0.101,0.3,0.101,0.5,0.101\\a \\9 \\9 c0.2,0,0.3,0,0.5-0.101c0.2-0.101,0.301-0.199,0.301-0.3c0-0.1,0.199-0.301,0.199-0.399C96.6,179.7,96.7,179.4,96.7,179.2z\\"/>\\a </g>\\a <circle fill=\\"#636363\\" cx=\\"95\\" cy=\\"95\\" r=\\"7\\"/>\\a </svg>\\a ") 50% 50% / 191px no-repeat",
  "a144": " url("img.ceec04074699c900.png")",
  "a145": " url("img.ceec04074699c900.png")",
  "a148": " url("data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"100%\\" height=\\"100%\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /></svg>")",
  "a149": " url("data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"100%\\" height=\\"100%\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /></svg>")",
  "a15": " url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26' fill='%23007aff'><rect width='4' height='4'/><rect x='8' y='1' width='34' height='2'/><rect y='11' width='4' height='4'/><rect x='8' y='12' width='34' height='2'/><rect y='22' width='4' height='4'/><rect x='8' y='23' width='34' height='2'/></svg>")",
  "a150": " url("data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"100%\\" height=\\"100%\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /></svg>")",
  "a151": " url("data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"100%\\" height=\\"100%\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /></svg>")",
  "a152": " url("img.ceec04074699c900.png")",
  "a153": " url("img.ceec04074699c900.png")",
  "a154": " url("other.ceec04074699c900.png")",
  "a155": " url("img.ceec04074699c900.png")",
  "a156": " url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>")",
  "a157": " url("data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"10\\" height=\\"10\\"><rect fill=\\"gray\\" width=\\"5\\" height=\\"5\\" y=\\"0\\" x=\\"0\\" /></svg>")",
  "a158": " src("http://www.example.com/pinkish.gif")",
  "a159": " src(var(--foo))",
  "a16": " url("data:image/svg+xml;charset=utf-8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><filter id=\\"filter\\"><feGaussianBlur in=\\"SourceAlpha\\" stdDeviation=\\"0\\" /><feOffset dx=\\"1\\" dy=\\"2\\" result=\\"offsetblur\\" /><feFlood flood-color=\\"rgba(255,255,255,1)\\" /><feComposite in2=\\"offsetblur\\" operator=\\"in\\" /><feMerge><feMergeNode /><feMergeNode in=\\"SourceGraphic\\" /></feMerge></filter></svg>#filter")",
  "a160": " url("img.ceec04074699c900.png" param(--color var(--primary-color)))",
  "a161": " src("img.ceec04074699c900.png" param(--color var(--primary-color)))",
  "a162": " url("img img.ceec04074699c900.png")",
  "a163": " url("img.ceec04074699c900.png")",
  "a164": " url(img.png bug)",
  "a165": " url(imgn.ceec04074699c900.png)",
  "a166": " url("data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"\\9                 width=\\"10\\" height=\\"10\\"><rect fill=\\"gray\\" width=\\"5\\" height=\\"5\\" y=\\"0\\" x=\\"0\\" /></svg>")",
  "a167": " url(http://example.com/image.jpg)",
  "a168": " url(http://example.com/image.jpg)",
  "a169": " url("data:,")",
  "a17": " url("data:image/svg+xml;charset=utf-8,<svg xmlns=\\\\\\"http://www.w3.org/2000/svg\\\\\\"><filter id=\\\\\\"filter\\\\\\"><feGaussianBlur in=\\\\\\"SourceAlpha\\\\\\" stdDeviation=\\\\\\"0\\\\\\" /><feOffset dx=\\\\\\"1\\\\\\" dy=\\\\\\"2\\\\\\" result=\\\\\\"offsetblur\\\\\\" /><feFlood flood-color=\\\\\\"rgba(255,255,255,1)\\\\\\" /><feComposite in2=\\\\\\"offsetblur\\\\\\" operator=\\\\\\"in\\\\\\" /><feMerge><feMergeNode /><feMergeNode in=\\\\\\"SourceGraphic\\\\\\" /></feMerge></filter></svg>#filter")",
  "a170": " url("data:,")",
  "a171": " image(ltr "img.png#xywh=0,0,16,16", red)",
  "a172": " image-set(linear-gradient(blue, white) 1x, linear-gradient(blue, green) 2x)",
  "a173": " image-set(url("img.ceec04074699c900.png") type("image/png"), url("img.ceec04074699c900.png") type("image/png"))",
  "a174": " image-set("img.png" 1x, "img.png" 2x)",
  "a175": " image-set(url("img.ceec04074699c900.png") 1x, url("img.ceec04074699c900.png") 2x, url("img.ceec04074699c900.png") 3x)",
  "a176": " image-set("img.png" type("image/png"), "img.png" type("image/png")) "img.png"",
  "a177": " image-set("img.png" 1x type("image/png"), "img.png" 2x type("image/png"))",
  "a178": " image-set("img.png" type("image/png") 1x, "img.png" type("image/png") 2x)",
  "a179": " -webkit-image-set("img.png" 1x)",
  "a18": " url(#highlight)",
  "a180": " -webkit-image-set(url("img.ceec04074699c900.png" var(--foo, "test.png")) 1x)",
  "a181": " src("img.ceec04074699c900.png")",
  "a182": " src("img.ceec04074699c900.png")",
  "a183": " src("img.ceec04074699c900.png" var(--foo, "test.png"))",
  "a184": " src(var(--foo, "test.png"))",
  "a185": " src("img.ceec04074699c900.png")",
  "a186": " image-set("img.png" 1x, "img.png" 2x, "img.png" 3x)",
  "a187": " image-set("img.png" 1x, url("img.ceec04074699c900.png") 2x, "img.png" 3x)",
  "a188": " image-set("img.png" 1x, "img.png" 2x, url("img.ceec04074699c900.png") 3x)",
  "a189": " image-set(url("img.ceec04074699c900.png") 1x, "img.png" 2x, "img.png" 3x)",
  "a19": " url("#line-marker")",
  "a190": " image-set("img.png" 1x)",
  "a191": " image-set("img.png" 1x, "img.png" 2x)",
  "a197": " url("img.ceec04074699c900.png")",
  "a198": " image-set("img.png" 1x, "img.png" 2x, "img.png" 3x)",
  "a199": " -webkit-image-set("img.png" 1x)",
  "a2": " url("img.ceec04074699c900.png")",
  "a200": " -webkit-image-set("img.png" 1x)",
  "a22": " "do not use url(path)"",
  "a23": " 'do not "use" url(path)'",
  "a24": " -webkit-image-set(url("img1x.ceec04074699c900.png") 1x, url("img2x.ceec04074699c900.png") 2x)",
  "a25": " image-set(url("img1x.ceec04074699c900.png") 1x, url("img2x.ceec04074699c900.png") 2x)",
  "a26": " green url() xyz",
  "a27": " green url("") xyz",
  "a28": " green url("") xyz",
  "a29": " green url("   ") xyz",
  "a3": " url(img.ceec04074699c900.png)",
  "a30": " green url() xyz",
  "a4": " url("img.ceec04074699c900.png#hash")",
  "a40": " green url(https://raw.githubusercontent.com/webpack/media/master/logo/icon.png) xyz",
  "a41": " green url(//raw.githubusercontent.com/webpack/media/master/logo/icon.png) xyz",
  "a42": " url("img.ceec04074699c900.png?foo")",
  "a43": " url("img.ceec04074699c900.png?foo=bar")",
  "a44": " url("img.ceec04074699c900.png?foo=bar#hash")",
  "a45": " url("img.ceec04074699c900.png?foo=bar#hash")",
  "a46": " url("img.ceec04074699c900.png?")",
  "a47": " url("img.ceec04074699c900.png") url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26' fill='#007aff'><rect width='4' height='4'/><rect x='8' y='1' width='34' height='2'/><rect y='11' width='4' height='4'/><rect x='8' y='12' width='34' height='2'/><rect y='22' width='4' height='4'/><rect x='8' y='23' width='34' height='2'/></svg>") url("img.ceec04074699c900.png")",
  "a48": " __url__()",
  "a49": " url("img-simple.ceec04074699c900.png")",
  "a5": " url("img.ceec04074699c900.png")",
  "a50": " url("img-simple.ceec04074699c900.png")",
  "a51": " url("img-simple.ceec04074699c900.png")",
  "a52": " url(img.ceec04074699c900.png)",
  "a53": " url(img.ceec04074699c900.png)",
  "a55": " -webkit-image-set()",
  "a56": " image-set()",
  "a58": " image-set("")",
  "a59": " image-set("")",
  "a6": " green url("img.ceec04074699c900.png") xyz",
  "a60": " image-set("" 1x)",
  "a61": " image-set(url())",
  "a62": " image-set(url())",
  "a63": " image-set(url())",
  "a64": " image-set(url(""))",
  "a65": " image-set(url(""))",
  "a66": " image-set(url("") 1x)",
  "a67": " image-set(1x)",
  "a68": " image-set(1x)",
  "a69": " image-set(calc(1rem + 1px) 1x)",
  "a7": " green url("img.ceec04074699c900.png") xyz",
  "a70": " -webkit-image-set("./img1x.png" 1x, "./img2x.png" 2x)",
  "a71": " image-set("./img1x.png" 1x)",
  "a72": " image-set("./img1x.png" 1x, "./img2x.png" 2x)",
  "a73": " image-set("./img img.png" 1x, "./img img.png" 2x)",
  "a74": " image-set("./img1x.png" 1x, "./img2x.png" 2x), image-set("./img1x.png" 1x, "./img2x.png" 2x)",
  "a75": " image-set("./img1x.png" 1x, "./img2x.png" 2x, "./img3x.png" 600dpi)",
  "a76": " image-set("./img1x.png?foo=bar" 1x)",
  "a77": " image-set("./img1x.png#hash" 1x)",
  "a78": " image-set("./img1x.png?#iefix" 1x)",
  "a79": " -webkit-image-set(url("img1x.ceec04074699c900.png") 1x, url("img2x.ceec04074699c900.png") 2x)",
  "a8": " green url(img.ceec04074699c900.png) xyz",
  "a80": " -webkit-image-set(url("img1x.ceec04074699c900.png") 1x)",
  "a81": " -webkit-image-set(url("img1x.ceec04074699c900.png") 1x)",
  "a82": " image-set(url(img1x.ceec04074699c900.png) 1x)",
  "a83": " image-set(url(img1x.ceec04074699c900.png) 1x)",
  "a84": " image-set(url("img1x.ceec04074699c900.png") 1x, url("img2x.ceec04074699c900.png") 2x)",
  "a85": " image-set(url(img1x.ceec04074699c900.png) 1x, url(img2x.ceec04074699c900.png) 2x, url(img3x.ceec04074699c900.png) 600dpi)",
  "a86": " image-set(url("img img.ceec04074699c900.png") 1x, url("img img.ceec04074699c900.png") 2x)",
  "a87": " image-set(url("img1x.ceec04074699c900.png") 1x, "./img2x.png" 2x)",
  "a88": " url(imgimg.ceec04074699c900.png)",
  "a89": " url(img\\'img.ceec04074699c900.png)",
  "a9": " green url(img.ceec04074699c900.png) url(other-img.ceec04074699c900.png) xyz",
  "a90": " url(img\\'\\'\\'img.ceec04074699c900.png)",
  "a91": " url(img\\(img.ceec04074699c900.png)",
  "a92": " url(img\\)img.ceec04074699c900.png)",
  "a93": " url(img\\ img.ceec04074699c900.png)",
  "a94": " url(img\\'\\(\\)\\ img.ceec04074699c900.png)",
  "a95": " image-set(url(imgimg.ceec04074699c900.png) 1x, url(img\\'\\'\\'img.ceec04074699c900.png) 2x, url(img\\'img.ceec04074699c900.png) 3x, url(img\\(img.ceec04074699c900.png) 4x, url(img\\)img.ceec04074699c900.png) 5x, url(img\\ img.ceec04074699c900.png) 6x, url(img\\'\\(\\)\\ img.ceec04074699c900.png) 7x)",
  "a96": " url("img'''img.ceec04074699c900.png")",
  "a97": " url("img'() img.ceec04074699c900.png")",
  "a98": " url("img'img.ceec04074699c900.png")",
  "a99": " url("img(img.ceec04074699c900.png")",
  "b": " url("img.ceec04074699c900.png")",
  "c": " url(img.ceec04074699c900.png)",
  "d": " url("img.ceec04074699c900.png#hash")",
  "e": " url("img.ceec04074699c900.png")",
  "f": " green url("img.ceec04074699c900.png") xyz",
  "g": " green url("img.ceec04074699c900.png") xyz",
  "getPropertyValue": [Function],
  "h": " green url(img.ceec04074699c900.png) xyz",
  "i": " green url(img.ceec04074699c900.png) url(img.ceec04074699c900.png) xyz",
  "j": " green url("img img.ceec04074699c900.png") xyz",
  "k": " green url("img img.ceec04074699c900.png") xyz",
  "l": " green url(img.ceec04074699c900.png) xyz",
  "m": " green url(img.ceec04074699c900.png) xyz",
  "n": " green url(img.ceec04074699c900.png) xyz",
}
`;
